--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ django-cors-headers = "^3.10.0"
 drf-yasg = "^1.20.0"
 Pillow = "^8.4.0"
 requests = "^2.26.0"
+google-auth = "^2.3.3"
+PyJWT = "^2.3.0"
 
 [tool.poetry.dev-dependencies]
 
